changed package to deploy

--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage":"https://jasons321.github.io/personal-portfolio/",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
